kdebase (4:1.1.1-19990612-2) unstable; urgency=low

  * remove the .gmo files on clean

 -- Stephan Kulow <coolo@kde.org>  Sun, 13 Jun 1999 19:30:27 +0200

kdebase (4:1.1.1-19990612-1) unstable; urgency=low

  * New CVS upstream version
  * kthememgr is now a part of kdebase

 -- Ivan E. Moore II <rkrusty@debian.org>  Sat, 12 Jun 1999 03:30:55 -0400

kdebase (4:1.1.1-19990529-2) unstable; urgency=low

  * Fixing some pam stuff which includes a /etc/pam.d/kde file, making
    the pam name=kde so that it uses the /etc/pam.d/kde file instead of
    xdm, kdm, or whatever.
  * Fixing the linux fonts for konsole.
  * Fixing the /var/state/kdm issue

 -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 31 May 1999 17:45:55 -0400

kdebase (4:1.1.1-19990529-1) unstable; urgency=low

  * Down to just one lintian warning. (that will probably stay)
  * Fixing final issues with package.  This includes cleaned up kdmrc output
    postrm scripts, and removal of final lintian errors.
  * Making kdm not require xdm

 -- Ivan E. Moore II <rkrusty@debian.org>  Sat, 29 May 1999 22:00:55 -0400

kdebase (4:1.1.1-19990523-1) unstable; urgency=low

  * Fixing kappfinder issue
  * More postinst script fix's

 -- Ivan E. Moore II <rkrusty@debian.org>  Sun, 23 May 1999 04:00:55 -0400

kdebase (4:1.1.1-19990516-1) unstable; urgency=low

  * migrating kdm into it's own package
  * fixing i18n build issues

 -- Ivan E. Moore II <rkrusty@debian.org>  Sun, 16 May 1999 06:00:55 -0400

kdebase (4:1.1.1-19990424-1) unstable; urgency=low

  * new upstream version for KDE 1.1.1

 -- Stephan Kulow <coolo@kde.org>  Sat, 24 Apr 1999 16:53:55 +0200

kdebase (4:1.1-19990306-2) unstable; urgency=low

  * fixing some "lintian" problems

 -- Stephan Kulow <coolo@kde.org>  Sat, 13 Mar 1999 11:18:33 +0100

kdebase (4:1.1-19990306-1) unstable; urgency=low

  * new upstream version out of CVS (many translation updates and some
    security fixes

 -- Stephan Kulow <coolo@kde.org>  Sat,  6 Mar 1999 18:03:04 +0100
