@@ -1,0 +1,7 @@
+# KDE Config File
+[KDE Desktop Entry]
+MiniIcon=folder_blue.xpm
+Comment=KDE Data Folder
+URL=file:/usr/share/apps
+Icon=folder_blue.xpm
+Type=Link
