@@ -1,0 +1,7 @@
+# KDE Config File
+[KDE Desktop Entry]
+MiniIcon=folder_blue.xpm
+Comment=KDE Includes Folder
+URL=file:/usr/include/kde
+Icon=folder_blue.xpm
+Type=Link
