@@ -1,0 +1,7 @@
+# KDE Config File
+[KDE Desktop Entry]
+MiniIcon=folder_blue.xpm
+Comment=KDE Libraries Folder
+URL=file:/usr/lib
+Icon=folder_blue.xpm
+Type=Link
