@@ -1,0 +1,7 @@
+# KDE Config File
+[KDE Desktop Entry]
+MiniIcon=folder_blue.xpm
+Comment=KDE Mime Types Folder
+URL=file:/usr/share/mimelnk
+Icon=folder_blue.xpm
+Type=Link
