@@ -1,0 +1,7 @@
+# KDE Config File
+[KDE Desktop Entry]
+MiniIcon=folder_blue.xpm
+Comment=KDE Parts Folder
+URL=file:/usr/lib/parts
+Icon=folder_blue.xpm
+Type=Link
