@@ -1,0 +1,7 @@
+# KDE Config File
+[KDE Desktop Entry]
+MiniIcon=folder_blue.xpm
+Comment=KDE Toolbar Icons Folder
+URL=file:/usr/share/toolbar
+Icon=folder_blue.xpm
+Type=Link
