@@ -1,0 +1,7 @@
+# KDE Config File
+[KDE Desktop Entry]
+MiniIcon=folder_blue.xpm
+Comment=KDE Wallpapers Folder
+URL=file:/usr/share/wallpapers
+Icon=folder_blue.xpm
+Type=Link
