@@ -1,6 +1,9 @@
 kdebase (4:1.1.1-19990612-2) unstable; urgency=low
 
   * remove the .gmo files on clean
+  * minor fixes to kdm.postinst and rules 
+  * Minor updates to kderules script
+  * Adding in a workaround for kdisknav's KDE directory listings
 
  -- Stephan Kulow <coolo@kde.org>  Sun, 13 Jun 1999 19:30:27 +0200
 
